--- a/index.html
+++ b/index.html
@@ -1,34 +1,40 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="css/style.css">
-  
+  <link rel="stylesheet" href="css/style.css">
+
   <title>Gerenciador de tarefas</title>
 </head>
-<body class="dark">
-  <main>
-    <button id="theme-toggle">Alterar tema</button>
-    <h1>Gerenciador de tarefas</h1>
 
-    <form id="form-tarefa">
+<body class="dark">
+  <section class="container">
+    <main>
+      <button id="theme-toggle">Alterar tema</button>
+      <h1>Gerenciador de tarefas</h1>
+
+      <form id="form-tarefa">
         <input id="input-tarefa" type="text" placeholder="Digite a tarefa...">
         <button id="btn-adicionar" type="submit">Adicionar</button>
-    </form>
+      </form>
 
-    <div id="tarefas-container">
+      <div id="tarefas-container">
         <h2>Suas tarefas</h2>
         <ul id="lista-tarefas"></ul>
-    </div>
-    
+      </div>
 
-    <script src="script/script.js"></script>
-    
-  </main>
-  <footer>
-  
-  </footer>
+
+
+
+    </main>
+    <footer>
+      Todos os direitos reservados &copy; <span class="symbol">2023</span>
+    </footer>
+  </section>
 </body>
+<script src="script/script.js"></script>
+
 </html>
