--- a/index.html
+++ b/index.html
@@ -5,26 +5,37 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.18/dist/sweetalert2.min.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Rajdhani&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
-
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   <title>Gerenciador de tarefas</title>
 </head>
 
 <body class="dark">
   <section class="container">
     <main>
-      <button id="theme-toggle">Alterar tema</button>
+      <button id="theme-toggle"><i class="fa-solid fa-paintbrush"></i> Alterar tema</button>
       <h1>Gerenciador de tarefas</h1>
+
+
 
       <form id="form-tarefa">
         <input id="input-tarefa" type="text" placeholder="Digite a tarefa...">
-        <button id="btn-adicionar" type="submit">Adicionar</button>
+        <button id="btn-adicionar" class="btn btn-primary btn-lg" type="submit">
+        <i class="fa-solid fa-circle-check"></i>
+           Adicionar
+        </button>
       </form>
 
       <div id="tarefas-container">
         <h2>Suas tarefas</h2>
         <ul id="lista-tarefas"></ul>
       </div>
+
+      
 
 
 
@@ -34,7 +45,9 @@
       Todos os direitos reservados &copy; <span class="symbol">2023</span>
     </footer>
   </section>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
 <script src="script/script.js"></script>
-
+<script src="https://kit.fontawesome.com/a6f0c61e6c.js" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.18/dist/sweetalert2.min.js"></script>
 </html>
